tests/NormalTests/paczka1/fuzzy1/79386931.err
Error in line 2: 4zKC9WYbr7 S192 29,4
Error in line 9: ckdPuSl S598 49,7
Error in line 11: ckdPuSl S680 3,1
Error in line 5: SUoqaxKs3z S192 19,6
Error in line 15: SUoqaxKs3z AL0L L7,8
Error in line 18: rPFdknpf S598 10,15
Error in line 13: SUoqaxKs3z A202 69,8
Error in line 21: neF6 S192 47,1
